@@ -185,7 +185,6 @@ private:
     StatisticsManager*  statistics;
 
     int     protocolId;
-    unsigned entriesPerDir_;
     std::string svcType;
     std::string address;
 
