@@ -1,7 +1,14 @@
 History in reverse order
 ----------------------------------------------------
 
-2010-07-09 15:40 bukind
+----------------------------------------------------
+infosme-build-20100709-1 14:30 bukind (v2)
+
+2010-07-09 16:15 bukind
+  previous patch is rolled back!
+  bugfix: limit on the size of in-memory cache is now used
+  
+2010-07-09 15:40 bukind -- tag bukind-20100709-prefetch
   feature: tasks are (optionally) placed into subdirs of storeLocation
   the decision is made according to presence of parameter
   'entriesPerDirectory' in the main config.
